feat : implement jwt_community authentication function
+ models/group/* -> new model for community, authentication
+ models/user.js -> link privilege object id to user object
+ routes/jwtauth/jwtVerifyAccess.js -> check user accessibility
* routes/post/* -> apply jwtcommunity auth options to node
+ routes/jwtauth/jwtgetUser.js -> export validation code
* swagger.yaml -> update swagger document
